Changes end feb

--- a/chapter_events.tex
+++ b/chapter_events.tex
@@ -10,7 +10,7 @@ This chapter describes two intense rainfall and flash flooding events in the UK 
 The two events used as case studies took place in 1) the Ryedale catchment, near the town of Helmsley, North Yorkshire, 2005; and  2) the Valency catchment near the village of Boscastle, Cornwall, 2004. Both catchments experienced intense rainfall leading to extensive and damaging flash flooding \citep{golding2005boscastle,sibley2009analysis}. There were significant economic impacts for both communities, as well as geomorphological changes to the river channels and flood plains observed in the aftermath of the flooding \citep{wallingford2005flooding,wass2008investigation}.
 
 \section{Meteorological setting}
-The events were chosen such that they could be considered as infrequent in the typical return period of flooding events for each particular catchment. Since there is no commonly agreed definition of what constitutes an extreme or infrequent event \citep[e.g.][]{wilby2008climate,fowler2010detecting,jones2014objective,}, for the purpose of this study, events only likely to occur approximately once in several hundred years were chosen. Peak discharges for each of the following flood events exceed the 99th percentile for their respective catchments (National River Flow Archives, 20xx).  An overview map of the catchment locations is given in Figure \ref{fig_location_map}, marked by the location of their main settlements. Table \ref{table_met_setting} summarises the key features of each catchment and its associated storm.
+The events were chosen such that they could be considered as infrequent in the typical return period of flooding events for each particular catchment. Since there is no commonly agreed definition of what constitutes an extreme or infrequent event \citep[e.g.][]{wilby2008climate,fowler2010detecting,jones2014objective,}, for the purpose of this study, events only likely to occur approximately once in several hundred years were chosen. Peak discharges for each of the following flood events exceed the 99th percentile for their respective catchments (National River Flow Archives, 2016).  An overview map of the catchment locations is given in Figure \ref{fig_location_map}, marked by the location of their main settlements. Table \ref{table_met_setting} summarises the key features of each catchment and its associated storm.
 
 \begin{figure}[htb]
 \includegraphics[width=11cm]{chp_events_figures_scripts/figure_location_map.eps}
@@ -54,7 +54,7 @@ On the day of the storm, rainfall accumulations of up to 184mm\footnote{from the
 
 
 \subsection{Ryedale, North York Moors storm 2005}
-The Ryedale storm occurred on 19 June 2005. Intense rainfall throughout the afternoon led to total accumulated rainfall amounts of up to 89mm in Ryedale, between the hours of 1400--1800 UTC\footnote{Measured by the Helmsley raingauge}. Peak instantaneous rainfall rates were estimated to have been around 32.5mm hr\(^-1\) \citep{sibley2009analysis} to 59.4 mm hr \(^{-1}\) \citep{hopkins2012knowledge}, though one report states they reached as high as 125 mm hr \(^{-1}\) \citep{cinderey2005north}. Figure \ref{fig_ryedale_rain_totals} shows the total accumulate rainfall radar totals from the 1km composite radar product. Most areas of the catchment receive total rainfall accumulations similar to the reported raingauge figure (89mm), though up to 131mm is reported in one grid square in the south of the catchment area.
+The Ryedale storm occurred on 19 June 2005. Intense rainfall throughout the afternoon led to total accumulated rainfall amounts of up to 89mm in Ryedale, between the hours of 1400--1800 UTC\footnote{Measured by the Helmsley raingauge}. Peak instantaneous rainfall rates were estimated to have been around 32.5mm hr\(^-1\) \citep{sibley2009analysis} to 59.4 mm hr\(^{-1}\) \citep{hopkins2012knowledge}, though one report states they reached as high as 125 mm hr\(^{-1}\) \citep{cinderey2005north}. Figure \ref{fig_ryedale_rain_totals} shows the total accumulate rainfall radar totals from the 1km composite radar product. Most areas of the catchment receive total rainfall accumulations similar to the reported raingauge figure (89mm), though up to 131mm is reported in one grid square in the south of the catchment area.
 
 Antecedent conditions before the Ryedale storm of 2005 had been dry over a prolonged period over much of the region \citep{sibley2009analysis}, leading to cracking of the surface peat in the higher elevations of the catchment. Soil moisture deficit was estimated to be around 60mm in the catchment, higher than usual due to the drier conditions in the preceding months \citep{wass2008investigation}. With a high soil moisture deficit, thinner soils in the upper reaches of the catchment would have been dry before the intense rainfall.
 
