--- a/literature.bib
+++ b/literature.bib
@@ -3551,4 +3551,23 @@ year = {2002}
   year={2005},
   publisher={Wiley Online Library}
 }
+@article{beven1997topmodel,
+  title={TOPMODEL: a critique},
+  author={Beven, Keith},
+  journal={Hydrological processes},
+  volume={11},
+  number={9},
+  pages={1069--1085},
+  year={1997}
+}
+@article{beven1984testing,
+  title={Testing a physically-based flood forecasting model (TOPMODEL) for three UK catchments},
+  author={Beven, KJ and Kirkby, MJ and Schofield, N and Tagg, AF},
+  journal={Journal of Hydrology},
+  volume={69},
+  number={1-4},
+  pages={119--143},
+  year={1984},
+  publisher={Elsevier}
+}
 
