--- a/thesis.tex
+++ b/thesis.tex
@@ -10,7 +10,9 @@
 
 % Use this command to output a single chapter
 %\includeonly{chapter_events,chapter_geomorph}
-%\includeonly{chapter2}
+%\includeonly{chapter_floodinundation}
+%\includeonly{chapter_metdatamodels}
+
 
 \usepackage{rotating}
 \usepackage[labelfont=bf]{caption}
